# small-graph-qt-ioa

./: CMakeLists.txt  graph.cpp  graph.hpp  graphscene.cpp  graphscene.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  nodegraphicsitem.cpp  nodegraphicsitem.hpp
testnetwork/: edges.txt  nodes.txt
